package br.edu.ifpr.padroes.factory;

public interface Pedido {

    void preparar();

}