package br.edu.ifpr.padroes.factory;



public abstract class PedidoFactory {

    public abstract Pedido criarPedido();

}